<resources>

    <string name="overflow_prompt_title">More actions</string>
    <string name="overflow_prompt_description">Tap the 3 vertical dots to see more options</string>
    <string name="overflow_unavailable">Overflow unavailable</string>
    <string name="action_tick">Positive action</string>

    <string name="app_name">eggWise Mobile 2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">eggWise Mobile Brinsea Products Inc.</string>
    <string name="nav_header_subtitle">Brinsea Products Inc.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Egg Batch</string>
    <string name="menu_slideshow">Settings</string>
    <string name="menu_tools">Exit</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Egg Batch</item>
        <item>Settings</item>
        <item>Exit</item>
        <item>Share</item>
        <item>Send</item>
    </string-array>

    <string name="brinsea_image">Brinsea image</string>
    <string name="eggwise_image">eggWISE image</string>
    <string name="link_brinsea_facebook">Facebook: <a href="https://www.facebook.com/pages/Brinsea-ProductsInc/140621339296778">www.facebook.com/Brinsea-Products Inc.</a></string>
    <string name="link_brinsea">Brinsea Products Inc. Website: <a href="http://www.brinsea.com">www.brinsea.com</a></string>
    <string name="link_almitchell"><a href="http://www.almitchellmobile.net">Developed by AL Mitchell Mobile: http://www.almitchellmobile.net</a></string>
    <string name="link_almitchell_brinsea"><a href="http://www.almitchellmobile.net">Developed for Brinsea Products Inc. http://www.brinsea.com</a><a href="http://http://www.brinsea.com">by AL Mitchell: <br></br>http://www.almitchellmobile.net </a></string>
    <string name="by_line_almitchell">Developed by AL Mitchell http://www.almitchellmobile.net</string>
    <string name="by_line_almitchell1">Developed by AL Mitchell</string>
    <string name="by_line_almitchell2">http://www.almitchellmobile.net</string>
    <string name="title_activity_add_incubator">Add Incubator </string>
    <string name="title_activity_incubator_list">Incubator List </string>
    <string name="title_activity_egg_batch_list">Egg Batch List </string>
    <string name="title_activity_add_batch">Add Batch </string>
    <string name="egg_batch_label">Egg Batch Label</string>
    <string name="number_of_eggs">Number Of Eggs</string>
    <string name="species_name">Species Name</string>
    <string name="common_name">Common Name</string>
    <string name="incubator_name">Incubator Name</string>
    <string name="set_date">Set Date</string>
    <string name="hatch_date">Hatch Date</string>
    <string name="location">Location</string>
    <string name="desired_weight_loss">Desired Weight Loss</string>
    <string name="track_entire_batch">Track Entire Batch</string>
    <string name="track_specific_eggs">Track Specific Eggs</string>
    <string name="title_activity_weight_loss_list">Weight Loss List </string>
    <string name="title_activity_add_weight_loss">Add Weight Loss </string>
    <string name="reading_date">Reading Date</string>
    <string name="egg_weight">Egg Weight</string>
    <string name="save_button">Save</string>
    <string name="egg_label">Egg Label</string>
    <string name="title_activity_configuration_options">ConfigurationOptionsActivity</string>
    <string name="rb_value_celsius">Celsius</string>
    <string name="rb_value_fahrenheit">Fahrenheit</string>
    <string name="rb_value_wet_bulb_readings">Wet Bulb Readings</string>
    <string name="rb_value_relative_humidity_percentage">Relative Humidity Percentage</string>
    <string name="rb_value_grams">Grams</string>
    <string name="rb_value_ounces">Ounces</string>
    <string name="title_activity_main2">Weight Loss Chart </string>
    <string-array name="sort_by_array">
        <item>By Day ASC, By Egg ASC</item>
        <item>By Day ASC, By Egg DESC</item>
        <item>By Day DESC, By Egg ASC</item>
        <item>By Day DESC, By Egg DESC</item>
    </string-array>
    <string name="title_activity_egg_wise_main">eggWise Mobile 2.0</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="menu_prompt_title">Just how you want it</string>
    <string name="menu_prompt_description">Tap the menu icon to switch accounts, change settings &amp; more</string>
    <string name="menu_prompt_content_description">This is an example of the accessibility content description, tap to exit. Tap the menu icon to switch accounts, change settings &amp; more</string>



    <string name="search_prompt_title">Search your emails</string>
    <string name="search_prompt_description">Tap the icon to quickly scan your emails</string>

    <string name="FabTarget_primaryText">Loaded from style</string>
    <string name="FabTarget_secondaryText">This was loaded from a style</string>

    <string name="example_navigation_title">Navigation</string>
    <string name="example_navigation_description">Displays prompt over the hamburger menu icon</string>

    <string name="example_overflow_title">Overflow</string>
    <string name="example_overflow_description">Displays prompt over the app bar more items menu item</string>

    <string name="example_search_title">App bar action icon</string>
    <string name="example_search_description">Displays prompt over the search icon in the app bar</string>

    <string name="example_fab_title">FAB</string>
    <string name="example_fab_description">Displays prompt over the FAB button</string>

    <string name="example_style_title">From style</string>
    <string name="example_style_description">Displays prompt over the app bar more items menu item with a style loaded from a resource</string>

    <string name="example_no_auto_dismiss_title">No auto dismiss</string>
    <string name="example_no_auto_dismiss_description">Displays prompt over the FAB button that can only be dismissed by pressing the FAB button</string>

    <string name="kotlin_activity_title">Kotlin</string>
    <string name="kotlin_activity_description">Examples written in Kotlin</string>

    <string name="example_dialog_title">Dialog</string>
    <string name="example_dialog_description">An example with a dialog</string>

    <string name="example_support_fragment_dialog_title">Support Fragment Dialog</string>
    <string name="example_support_fragment_dialog_description">An example with a support library fragment dialog</string>

    <string name="example_action_mode_title">Action Mode</string>
    <string name="example_action_mode_description">Shows an action mode with a prompt shown</string>

    <string name="action_mode_prompt_title">Action Mode</string>
    <string name="action_mode_prompt_description">Tap the back arrow to close the action mode</string>

    <string name="action_mode_tick_prompt_title">Tick</string>
    <string name="action_mode_tick_prompt_description">Replace this with your own action description</string>



    <string name="example_centre_title">Centre</string>
    <string name="example_centre_description">Displays activity with examples where the prompt is position away from the activity edges</string>
    <string name="example_centre_instructions">Tap on a button to show a prompt</string>

    <string name="fab_centre_title">Centre</string>
    <string name="fab_centre_description">Text and background are positioned differently</string>

    <string name="example_card_title">Cards</string>
    <string name="example_card_description">Displays activity with a prompt contained within a card</string>

    <string name="example_list_title">List</string>
    <string name="example_list_description">Displays activity with a prompt targeting a list item</string>

    <string name="title_activity_card">Card Example</string>

    <string name="example_card_fab_title">Card example</string>
    <string name="example_card_fab_description">Tap to see a card example</string>

    <string name="example_card_card_title">Card example</string>
    <string name="example_card_card_description">Clipped to card bounds</string>

    <string name="example_bottom_sheet_title">Bottom Sheet Dialog</string>
    <string name="example_bottom_sheet_description">Displays prompt over a bottom sheet dialog</string>

    <string name="example_rectangle_title" translatable="false">Rectangle Prompt</string>
    <string name="example_fullscreen_rectangle_title" translatable="false">Fullscreen Rectangle Prompt</string>
    <string name="example_rectangle_description" translatable="false">Displays a prompt with a rectangle background and focal</string>

    <string name="example_show_for_title">showFor</string>
    <string name="example_show_for_description">Displays prompt over the FAB button for 7 seconds</string>

    <string name="title_activity_list_example" translatable="false">List Example</string>
    <string name="example_sequence">Show an example of a sequence of prompts</string>
    <string name="example_sequence_title">Sequence</string>

    <string name="example_view_pager_title">View pager tab</string>
    <string name="example_view_pager_description">Show a prompt targeting a view pager tab</string>

</resources>
