<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EggWiseMainActivity"
    android:background="@drawable/radialback3"
    tools:showIn="@layout/activity_egg_wise_main">


    <ImageView
        android:id="@+id/eggwise_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/eggwise_image"
        android:src="@drawable/eggwise_master_background1t"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/buttonLinkBrinsea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/link_brinsea"
        android:textColor="#0000c0"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eggwise_image"

        />

    <Button
        android:id="@+id/buttonLinkBrinseaFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/link_brinsea_facebook"
        android:textColor="#0000c0"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLinkBrinsea"

        />

    <ImageView
        android:id="@+id/brinsea_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonByLineALMmitchell"
        android:contentDescription="@string/brinsea_image"
        android:src="@drawable/brinsea_1t"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLinkBrinseaFacebook"

        />

    <Button
        android:id="@+id/buttonByLineALMmitchell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/by_line_almitchell1"
        android:textColor="#0000c0"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brinsea_image"

        />

</androidx.constraintlayout.widget.ConstraintLayout>