<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->
    <ImageView
        android:id="@+id/eggwise_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:keepScreenOn="true"
        android:src="@drawable/eggwise_master_background1t"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/eggwise_image" />

    <Button
        android:id="@+id/buttonLinkBrinsea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eggwise_image"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:text="@string/link_brinsea"
        android:textColor="#0000c0"

        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eggwise_image" />

    <Button
        android:id="@+id/buttonLinkBrinseaFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLinkBrinsea"
        android:layout_centerHorizontal="true"

        android:background="@android:color/transparent"
        android:text="@string/link_brinsea_facebook"
        android:textColor="#0000c0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLinkBrinsea" />

    <ImageView
        android:id="@+id/brinsea_image"
        android:layout_above="@+id/buttonByLineALMmitchell"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/brinsea_1t"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonByLineALMmitchell"
        android:contentDescription="@string/brinsea_image"
        />

    <Button
        android:id="@+id/buttonByLineALMmitchell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:keepScreenOn="true"
        android:textSize="20sp"
        android:textColor="#0000c0"
        android:background="@android:color/transparent"

        android:text="@string/by_line_almitchell1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>